--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ beautifulsoup4==4.4.1
 Django==1.6.7
 django-crispy-forms==1.6.0
 django-jsonview==0.5.0
+django-resized==0.3.5
 flake8==2.5.4
 mccabe==0.4.0
 pep8==1.7.0
+Pillow==3.2.0
 pyflakes==1.0.0
 South==1.0.2
